inputs e buttons das buscas e listas

--- a/src/main/resources/templates/curso/listaBuscaCurso.html
+++ b/src/main/resources/templates/curso/listaBuscaCurso.html
@@ -100,12 +100,13 @@
 		  </div>
 		</div>
 	  </nav>
+	  
 <h1>Lista de Curso</h1>
-	<div style="margin-top:5%">
-		<form>
-			<input type="button" value="Voltar para a lista completa" onclick="history.back()">
-		</form>
-	</div>
+<div style="margin-top:4%; margin-left: 1%;">
+	<form>
+		<input type="button" class="btn btn-primary" value="Voltar para a lista completa" onclick="history.back()">
+	</form>
+</div>
 <table class="table">
 <thead>
   <tr>
