--- a/src/main/resources/templates/listas/buscarUser.html
+++ b/src/main/resources/templates/listas/buscarUser.html
@@ -139,9 +139,9 @@
 			</div>
 		  </div>
 		  <br>
-		<div style="margin-top:5%">
+		<div style="margin-top:4%; margin-left: 1%;">
 			<form>
-				<input type="button" value="Voltar para a lista completa" onclick="history.back()">
+				<input type="button" class="btn btn-primary" value="Voltar para a lista completa" onclick="history.back()">
 			</form>
 		</div>
 		
