--- a/src/main/resources/templates/pesquisa/buscaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/buscaPesquisa.html
@@ -121,9 +121,9 @@
 	<br>
 	<br>
 	<br>
-	<div style="margin-top:5%">
+	<div style="margin-top:3%; margin-left: 1%;">
 		<form>
-			<input type="button" value="Voltar para a lista completa" onclick="history.back()">
+			<input type="button" class="btn btn-primary" value="Voltar para a lista completa" onclick="history.back()">
 		</form>
 	</div>
 	<table class="table" >
@@ -159,7 +159,7 @@
 	<div th:if="${pesq.empty}"
 		 style="margin-left: auto; margin-right: auto; ">
 		<p th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center;margin-left: auto; margin-right: auto; '"
-		>Ops! Nada foi encontrado. Tente fazer uma busca diferente.</p>
+		>Ops! Nada foi Encontrado. Tente fazer uma busca diferente.</p>
 	</div>
 	
 	<!-- JavaScript Bundle with Popper -->
