--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -121,11 +121,12 @@
 	<br>
 	<br>
 	<br>
-	<div style="margin-top:5%">
+	<div style="margin-top:3%; margin-left:1%;">
 		<form action="/pesquisa/buscaPesquisa">
-			<div>
-				<i class=" prefix material-icons ">search</i>
-				<input id="icon_prefix" type="text" name="turma" class="validate" placeholder="Buscar por turma">
+			<div class="input-group">
+				<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
+				<input id="icon_prefix" type="text" name="turma" class="validate" placeholder="Buscar por Turma">
+				<input type="submit" value="Buscar" class="btn btn-primary">
 			</div>
 		</form>
 	</div>
