--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -102,11 +102,12 @@
 	  </nav>
 <h1>Lista de Curso</h1>
 
-	<div style="margin-top:5%">
+	<div style="margin-top:4%; margin-left:1%;">
 		<form action="/buscaCurso">
-			<div>
-				<i class=" prefix material-icons ">search</i>
-				<input id="icon_prefix" type="text" name="busca" class="validate" placeholder="Buscar por nome">
+			<div class="input-group">
+				<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
+				<input id="icon_prefix" type="text" name="busca" class="validate" placeholder="Busque o nome do curso">
+				<input type="submit" value="Buscar" class="btn btn-primary">
 			</div>
 		</form>
 	</div>
