--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -139,11 +139,13 @@
 			</div>
 		  </div>
 		  <br>
-		<div style="margin-top:5%">
+		<div style="margin-top:5%; margin-left: 1%;">
 			<form action="/buscarUser">
-				<div>
-					<i class=" prefix material-icons ">search</i>
-					<input id="icon_prefix" type="text" name="nome" class="validate" placeholder="Buscar por nome">
+				<div class="input-group">
+					<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
+					
+					<input id="icon_prefix" type="text" name="nome" class="validate" placeholder="Buscar por Usuario">
+					<input type="submit" value="Buscar" class="btn btn-primary">
 				</div>
 			</form>
 		</div>
