add column docente

--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -106,7 +106,7 @@
 		<form action="/buscaCurso">
 			<div class="input-group">
 				<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
-				<input id="icon_prefix" type="text" name="busca" class="validate" placeholder="Busque o nome do curso">
+				<input id="icon_prefix" type="text" name="busca" class="validate" placeholder="Buscar por nome">
 				<input type="submit" value="Buscar" class="btn btn-primary">
 			</div>
 		</form>
