--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -144,7 +144,7 @@
 				<div class="input-group">
 					<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
 					
-					<input id="icon_prefix" type="text" name="nome" class="validate" placeholder="Buscar por Usuario">
+					<input id="icon_prefix" type="text" name="nome" class="validate" placeholder="Buscar por nome">
 					<input type="submit" value="Buscar" class="btn btn-primary">
 				</div>
 			</form>
