--- a/src/main/resources/templates/pesquisa/buscaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/buscaPesquisa.html
@@ -132,7 +132,8 @@
 
 				<th class="id">Código </th>
 				<th class="th-height">Curso</th>
-				<th class="th-height">Turma</th>
+				<th class="th-height">Turma</th>\
+				<th class="th-height">Docente</th>
 				<th class="th-height">Data Vencimento</th>
 				<th class="th-height" th:if="${session.docenciaLogado} or ${session.diretoriaLogado}">Pendências</th>
 				<th class="th-height">Respostas</th>
@@ -146,6 +147,7 @@
 				<td th:text="${ps.id}"></td>
 				<td th:text="${ps.curso?.descCurso}"/>
 				<td th:text="${ps.turma}"/>
+				<td th:text="${ps.usuarioDocente.nome}"/>
 				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}" th:style="${ps.dataVencimento.after(#dates.createNow())} ? 'color: black' : 'color: #c32f27'" ></td>
 				<td th:if="${session.docenciaLogado}" id="italico" th:text="${ps.justificativa ? 'Justificativa pendente, verifique as respostas' : 'Nenhuma pendência'}"/>
 				<td th:if="${session.diretoriaLogado}" th:text="${ps.justificativa ? 'Contém justificativas solicitadas' : 'Nenhuma pendência'}" style="font-style: italic;"/>
