ajustes style buscas e legenda pdf

--- a/src/main/resources/templates/curso/listaBuscaCurso.html
+++ b/src/main/resources/templates/curso/listaBuscaCurso.html
@@ -9,6 +9,7 @@
 			<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
 			<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
 		<link rel="stylesheet" href="../../css/listas/lista.css" />  
+		<link rel="stylesheet" href="../../css/nada-encontrado.css" />  
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -128,10 +129,9 @@
  
 </tbody>
 </table>
-	<div th:if="${curso.empty}"
-		 style="margin-left: auto; margin-right: auto; ">
-		<p th:style="'font-size:150%; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; -webkit-margin-start: 0px;-webkit-margin-end: 0px; font-weight: 500; max-width: 100px; text-align: center;margin-left: auto; margin-right: auto; '"
-		>Ops! Nada foi encontrado. Tente fazer uma busca diferente.</p>
+	<div class="nada-encontrado" th:if="${curso.empty}">
+		<p class="p">Ops! Nada foi encontrado.</p> 
+		<p class="p">Tente fazer uma busca diferente.</p>
 	</div>
 
 <!-- JavaScript Bundle with Popper -->
