--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -102,11 +102,13 @@
 	  </nav>
 <h1>Lista de Curso</h1>
 
-	<div style="margin-top:4%; margin-left:1%;">
+	<div style="margin-top:4%; margin-left:40%;">
 		<form action="/buscaCurso">
 			<div class="input-group">
 				<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
-				<input id="icon_prefix" type="text" name="busca" class="validate" placeholder="Busque o nome do curso">
+				<input id="icon_prefix" type="text" name="busca"
+				class="validate" placeholder="Busque o nome do curso"
+				aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
 				<input type="submit" value="Buscar" class="btn btn-primary">
 			</div>
 		</form>
