--- a/src/main/resources/templates/curso/listaCurso.html
+++ b/src/main/resources/templates/curso/listaCurso.html
@@ -107,7 +107,7 @@
 			<div class="input-group">
 				<span class="input-group-text" id="inputGroup-sizing-default"><i class=" prefix material-icons ">search</i></span>
 				<input id="icon_prefix" type="text" name="busca"
-				class="validate" placeholder="Busque o nome do curso"
+				class="validate" placeholder="Buscar por nome"
 				aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
 				<input type="submit" value="Buscar" class="btn btn-primary">
 			</div>
